@@ -1,22 +1,39 @@
-.node-list__header,
-.node-list__element__row {
+.node-side-bar{
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
 }
 
-.node-list__header a {
-  margin-left: 5px;
-  width: 55px;
-  text-align: right;
-  display: inline-block;
+.node-list__header{
+  flex: 0 0 auto;
+}
+
+.node-list__header,
+.node-list__element__header {
+  display: flex;
+  flex-direction: row;
+}
+
+.node-list__header{
+  padding: 10px;
+  border-bottom: 1px solid #ececec;
+}
+.node-list__header__title {
+  flex: 1 0 auto;
+}
+
+.node-list__header .node-list__header__btn {
+  margin-right: 5px;
+  cursor: pointer;
+}
+
+.node-list__element__header .node-name {
+  flex: 1 1 auto; 
+  margin: 0 0 3px 0;
+  font-size: @font-size-small;
+  font-weight: bold;
 }
 
 .node-list__element__cell {
-  font-size: @font-size-small;
-}
-
-.node-list__element__cell h3 {
-  margin: 0 0 3px 0;
   font-size: @font-size-small;
 }
 
@@ -27,8 +44,18 @@
 }
 
 @media only screen and (max-width : @max-width-sm) {
-  .node-list__header__order,
+  .node-list__header .node-list__header__btn,
   .node-list__element__body {
     display: none;
   }
+}
+
+.node-list {
+    flex: 1 1 auto;
+    overflow-y: auto;
+}
+
+.node-list__element{
+  cursor: pointer;
+  flex: 1 1 auto;
 }
