@@ -4,7 +4,10 @@ Changes for Crate Admin Interface
 
 Unreleased
 ==========
-  
+
+ - Fixed styling issue that caused the last element in the side bar
+   list to be hidden.
+
  - Fixed an issue that caused the notification date to be `null` in safari.
 
 2017/02/15 1.1.1
